--- a/src/app/game-list/game-list.component.css
+++ b/src/app/game-list/game-list.component.css
@@ -1,59 +1,64 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .card {
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-	transition: 0.3s;
-	width: 30%;
-	margin-left: 35%;
-	margin-top: 50px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  /* width: 30%; */
+  margin-left: 35%;
+  margin-bottom: 20px;
 }
 
 .card:hover {
-	box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
 }
 
 .header {
-	padding: 15px 16px 15px 25px;
+  padding: 15px 16px 15px 25px;
 }
 
 .rounded_img {
-	width: 10%;
-	float: left;
-	margin-right: 20px;
+  width: 10%;
+  float: left;
+  margin-right: 20px;
 }
 
 .header h4 {
-	padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .header p {
-	color: grey;
+  color: grey;
 }
 
 .header span {
-	float: right;
-	margin-top: -50px;
+  float: right;
+  margin-top: -50px;
 }
 
 .main_img {
-	width: 100%;
+  width: 100%;
 }
 
 .desc p {
-	margin: 10px 20px 20px 20px;
+  margin: 10px 20px 20px 20px;
+}
+
+.buttons {
+  margin-left: 45%;
 }
 
 button {
-	margin: 10px 15px 10px 15px;
-	border: none;
-	padding: 8px 16px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 15px;
-	color: black;
-	text-transform: uppercase;
+  margin: 10px 5px 10px 15px;
+  border: none;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  color: black;
+  text-transform: uppercase;
+  text-align: center;
 }
