--- a/src/app/game-list/game-list.component.html
+++ b/src/app/game-list/game-list.component.html
@@ -1,17 +1,31 @@
-<div class="card" *ngFor="let game of games">
-	<div class="header">
-		<img [src]="game.editorImg" alt="rounded" class="rounded_img">
-		<h4><b>{{game.name}}</b></h4>
-		<p>{{game.type}}</p>
-		<span>{{game.note}}/10</span>
-	</div>
-	<img [src]="game.gameImg" alt="main_img" class="main_img">
-	<div class="desc">
-		<p>{{truncate(game.desc)}}</p>
-	</div>
-	<div>
-		<button>Follow</button>
-		<button>Share</button>
-		<button>Buy</button>
-	</div>
+<app-game-list-filter (filtered)="filtering($event)"></app-game-list-filter>
+
+<div class="buttons">
+  <button (click)="changeCardWidth('-', 10)">-</button>
+  <button (click)="changeCardWidth('+', 10)">+</button>
+  <button (click)="resetCardWidth()">Reset</button>
+</div>
+<div
+  class="card"
+  *ngFor="let game of filteredGames"
+  [style.width.px]="newCardWidth"
+>
+  <div class="header">
+    <img [src]="game.editorImg" alt="rounded" class="rounded_img" />
+    <h4>
+      <b>{{ game.name }}</b>
+    </h4>
+    <p>{{ game.type }}</p>
+    <span>{{ game.note }}/10</span>
+  </div>
+  <img [src]="game.gameImg" alt="main_img" class="main_img" />
+  <div class="desc">
+    <p>{{ truncate(game.desc) }}</p>
+  </div>
+  <div>
+    <app-game-buttons
+      [game]="game.name"
+      (clicked)="myAlert($event)"
+    ></app-game-buttons>
+  </div>
 </div>
