add developers & publishers interface's + edit api service

--- a/src/app/game-list-filter/game-list-filter.component.html
+++ b/src/app/game-list-filter/game-list-filter.component.html
@@ -34,7 +34,7 @@
     </li>
     <li>
       <div class="button" (click)="filter()">Filter</div>
-      <div class="button" (click)="reset()">RAZ</div>
+      <div class="button" (click)="reset()">Reset filter</div>
     </li>
   </ul>
 </form>
