--- a/src/app/game-list-filter/game-list-filter.component.html
+++ b/src/app/game-list-filter/game-list-filter.component.html
@@ -19,7 +19,9 @@
         (change)="setValue($event.target)"
       >
         <option disabled>Choisi un type</option>
-        <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+        <option *ngFor="let category of categories" [value]="category.id">{{
+          category.name
+        }}</option>
       </select>
     </li>
     <li>
@@ -35,6 +37,7 @@
     <li>
       <div class="button" (click)="filter()">Filter</div>
       <div class="button" (click)="reset()">Reset filter</div>
+      <br />
     </li>
   </ul>
 </form>
